# Skribidi

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
.ecode/: project_build.json
.github/workflows/: skribidi-linux-build-check.yml  skribidi-macos-build-check.yml  skribidi-windows-build-check.yml
example/: CMakeLists.txt  debug_draw.c  debug_draw.h  debug_render.c  debug_render.h  example_aligns.c  example_baseattribs.c  example_cached.c  example_culling.c  example_decorations.c  example_fallback.c  example_hyperlink.c  example_icons.c  example_inlineobj.c  example_inputfilter.c  example_notes.c  example_paragraphs.c  example_richtext.c  example_testbed.c  ime.c  main.c  render.c  render.h  utils.c  utils.h
include/: skb_attribute_collection.h  skb_attributes.h  skb_canvas.h  skb_common.h  skb_editor.h  skb_editor_rules.h  skb_font_collection.h  skb_icon_collection.h  skb_image_atlas.h  skb_input.h  skb_layout.h  skb_layout_cache.h  skb_rasterizer.h  skb_render.h  skb_render_cache.h  skb_rich_layout.h  skb_rich_text.h  skb_text.h
src/: CMakeLists.txt  skb_attribute_collection.c  skb_attributes.c  skb_canvas.c  skb_common.c  skb_common_internal.h  skb_editor.c  skb_editor_rules.c  skb_font_collection.c  skb_font_collection_internal.h  skb_icon_collection.c  skb_icon_collection_internal.h  skb_image_atlas.c  skb_input.c  skb_layout.c  skb_layout_cache.c  skb_layout_internal.h  skb_rasterizer.c  skb_render.c  skb_render_cache.c  skb_rich_layout.c  skb_rich_layout_internal.h  skb_rich_text.c  skb_rich_text_internal.h  skb_text.c  skb_text_internal.h  skribidi.natvis
test/: CMakeLists.txt  test_attributed_text.c  test_basic.c  test_canvas.c  test_cpp.cpp  test_editor.c  test_font_collection.c  test_hashtable.c  test_icon_collection.c  test_input.c  test_layout.c  test_layout_cache.c  test_render.c  test_render_cache.c  test_rich_text.c  test_tempalloc.c  tester.c
